stateDiagram-v2
    [*] --> IDLE

    IDLE --> MENU : Press *

    MENU --> LOCK_CONFIRM : Press 0
    MENU --> UNLOCK_WAIT_STAR : Press 1
    MENU --> CHANGE_WAIT_STAR : Press 2
    MENU --> STATUS_CONFIRM : Press 3
    MENU --> SHOW_RESULT : Invalid key

    LOCK_CONFIRM --> SHOW_RESULT : Press # → Lock
    LOCK_CONFIRM --> MENU : Press *

    UNLOCK_WAIT_STAR --> UNLOCK_PWD : Press *
    UNLOCK_WAIT_STAR --> SHOW_RESULT : Press # (error)

    UNLOCK_PWD --> UNLOCK_PWD : Digit 0-9
    UNLOCK_PWD --> SHOW_RESULT : Press # → Verify

    CHANGE_WAIT_STAR --> CHANGE_OLD_PWD : Press *
    CHANGE_WAIT_STAR --> SHOW_RESULT : Press # (error)

    CHANGE_OLD_PWD --> CHANGE_OLD_PWD : Digit 0-9
    CHANGE_OLD_PWD --> CHANGE_NEW_PWD : Press *

    CHANGE_NEW_PWD --> CHANGE_NEW_PWD : Digit 0-9
    CHANGE_NEW_PWD --> SHOW_RESULT : Press # → Verify & Change

    STATUS_CONFIRM --> SHOW_RESULT : Press # → Show Status
    STATUS_CONFIRM --> MENU : Press *

    SHOW_RESULT --> IDLE : Timeout / Any key
    SHOW_RESULT --> MENU : Press *
